--- a/usuarios/templates/usuarios/addressDetail.html
+++ b/usuarios/templates/usuarios/addressDetail.html
@@ -10,12 +10,12 @@
     <p>CEP: {{ address.cep }}</p>
     <p>Logradouro: {{ address.logradouro }}</p>
     <p>Bairro: {{ address.bairro }}</p>
-    <p>Cidade: {{ address.localidade }}</p>
+    <p>localidade: {{ address.localidade }}</p>
     <p>UF: {{ address.uf }}</p>
 
-    <button><a href="{% url 'usuarios:editar' address.id %}">Editar</a></button>
-    <button><a href="{% url 'usuarios:listar' address.id %}">Lista</a></button>
-
+    <a href="{% url 'usuarios:update'   address.id %}">Editar</a>
+    <a href="{% url 'usuarios:delete' address.id %}">Excluir</a>
+    <a href="{% url 'usuarios:list' %}">Voltar</a>
 
 </body>
 </html>
