--- a/usuarios/templates/usuarios/addressForm.html
+++ b/usuarios/templates/usuarios/addressForm.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cadastrar Endereço</title>
 </head>
 <body>
     {% if address %}
@@ -11,26 +11,27 @@
         <form action="{% url 'usuarios:atualizar' address.id %}" method ='post'>
             {% csrf_token %}
             {% for field in form %}
-                {{ field.label_tag}}
-                <br>
-                {{ field }}
-                <br>
+                {{ field.label_tag}}<br>
+                {{ field }}<br>
             {% endfor %}
-            <button type="submit" value="Atualizar">Atualizar</button>
+            <br>
+            <button type="submit">Editar</button>
         </form>
-        
+        <br>
+        <button type="submit">Editar</button>
+    {% else %}
     <h1>Cadastrar Endereço</h1>
-    <form action="{% url 'usuarios:criar' %}" method ='post'>
+    <form action="{% url 'usuarios:create' %}" method ='post'>
         {% csrf_token %}
         {% for field in form %}
-            {{ field.label_tag }}
-            <br>
-            {{ field }}
-            <br>
+            {{ field.label_tag }}<br>
+            {{ field }}<br>
         {% endfor %}
         <br>
-        <button type="submit" value="Cadastrar">Cadastrar</button>
-        <br>
+        <button type="submit">Cadastrar</button>
     </form>
+    <br>
+    <button><a href="{% url 'usuarios:index' %}">Voltar</a></button>
+    {% endif %}
 </body>
 </html>
